fix: make project row be behind footer
There was a problem with the element layers, so I gave projects-row z-index so it doesn't overlap with other elements.

--- a/src/styles/components/_projectsRow.scss
+++ b/src/styles/components/_projectsRow.scss
@@ -20,6 +20,7 @@
     animation: shimmer 1.5s infinite;
     box-shadow: 0px 0px 4px 0px #00000047;
     margin-left: 5px;
+    z-index: -1;
 
     @include device(1080px) {
       width: 232px;
@@ -51,6 +52,7 @@
 
       img {
         opacity: 1;
+        z-index: -1;
       }
     }
   }
